--- a/examples/tables.html
+++ b/examples/tables.html
@@ -44,7 +44,7 @@ Coded by www.creative-tim.com
           <!-- <p>CT</p> -->
         </a>
         <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-          Creative Tim
+          Pharmacie Bichart
           <!-- <div class="logo-image-big">
             <img src="../assets/img/logo-big.png">
           </div> -->
